hfsincludedir=$(includedir)/hydrafs

hfsinclude_HEADERS = global.h
hfsinclude_HEADERS += log.h
hfsinclude_HEADERS += conf.h
hfsinclude_HEADERS += dir_tree.h 
hfsinclude_HEADERS += auth_client.h 
hfsinclude_HEADERS += client_pool.h
hfsinclude_HEADERS += hfs_fuse.h
hfsinclude_HEADERS += http_client.h
hfsinclude_HEADERS += http_connection.h
hfsinclude_HEADERS += hfs_file_operation.h
hfsinclude_HEADERS += hfs_encryption.h
hfsinclude_HEADERS += cache_mng.h
hfsinclude_HEADERS += hfs_range.h
hfsinclude_HEADERS += hfs_stats_srv.h
hfsinclude_HEADERS += utils.h
